fix contrast issue in header and minor amendment to meta tags

--- a/home/static/home/style.css
+++ b/home/static/home/style.css
@@ -29,6 +29,7 @@ h1 {
 header a {
     text-decoration: none;
     color: gold;
+    background-color: rgb(139, 0, 0, 0.2);
 }
 
 #navbar a:hover {
